<resources>
    <string name="app_name">DrawApp</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="shape">Shape</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="star">Star</string>
    <string name="space_ship">Space ship</string>
    <string name="moon">Moon</string>
    <string name="cloud">Cloud</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="beach">Beach</string>
    <string name="plain">Plain</string>
    <string name="sea">Sea</string>
    <string name="fish">Fish</string>
    <string name="bubbles">Bubbles</string>
    <string name="shell">Shell</string>
</resources>
